[project]
name = "hammad-python"
version = "0.0.39"
# flit requires descriptions
description = "Harmoniously Accelerated Micro-Modules for Application Development"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "hammad-python-core>=0.0.5",
]

# NOTE:
# - build system switched from hatchling to use flit
# - flit allows us to define namespace with
#   much more granular control
[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
# central namespace def - using implicit namespace packages (PEP 420)
# now changed from `hammad` -> `ham`
name = 'ham'

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
hammad-python-core = {workspace = true}

[dependency-groups]
dev = [
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio", 
    "twine>=6.1.0",
    "ipython",
    "ipykernel",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-jupyter",
]