[project]
name = "hammad-python"
dynamic = ["version"]
# flit requires descriptions
description = "Harmoniously Accelerated Micro-Modules for Application Development"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "hammad-python-core",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["libs/hammad-python/ham"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
hammad-python-core = {workspace = true}

[dependency-groups]
dev = [
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio", 
    "twine>=6.1.0",
    "ipython",
    "ipykernel",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-jupyter",
]