[project]
name = "hammad-python-core"
version = "0.0.5"
description = "Core utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "adaptix>=3.0.0b11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# NOTE: update to use core namespace only
packages = ["ham/core"]
