[project]
name = "hammad-python-core"
version = "0.0.5"
description = "Core utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "adaptix>=3.0.0b11",
    "typing-inspect>=0.9.0",
]

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ham.core"
include = ["py.typed"]