[project]
name = "hammad-python-core"
dynamic = ["version"]
description = "Core utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "adaptix>=3.0.0b11",
    "typing-inspect>=0.9.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["ham.core"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true