[project]
name = "hammad-python-data"
version = "0.0.2"
description = "Core utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "hammad-python-core>=0.0.2",
    "qdrant-client>=1.15.0",
    "tantivy>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ham"]
