[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["ham"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "hammad-python-data"
dynamic = ["version"]
description = "Data utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
    "qdrant-client>=1.15.1",
    # NOTE: dynamic versioning
    "hammad-python-core",
    "hammad-python-genai",
]
