[project]
name = "hammad-python-genai"
version = "0.0.1"
description = "Core utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "hammad-python-core>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ham"]