[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["ham"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "hammad-python-genai"
dynamic = ["version"]
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "instructor>=1.10.0",
    "litellm>=1.74.14",
    "pydantic-ai>=0.4.11",
    "openai-agents>=0.2.4",
    # NOTE: dynamic versioning
    "hammad-python-core",
]
