[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["ham"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "hammad-python-network"
dynamic = ["version"]
description = "Core utilities for hammad-python"
authors = [{name = "Hammad Saeed", email = "hammadaidev@gmail.com"}]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.1",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
    # NOTE: dynamic versioning
    "hammad-python-core",
    "bs4>=0.0.2",
]
